--- a/index.html
+++ b/index.html
@@ -2,88 +2,108 @@
 <html lang="bg">
 <head>
   <meta charset="UTF-8">
-  <title>Чатбот – Димитровград</title>
+  <title>Димитровград Чатбот</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #222; color: #fff; margin:0; padding:0; }
-    #chatbox { 
-      width: 350px; height: 500px; 
-      border: 2px solid #007bff; 
-      border-radius: 10px; 
-      background: #fff; 
-      display: flex; flex-direction: column; 
-      position: fixed; bottom: 20px; right: 20px; 
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-      z-index: 9999;
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
     }
-    #messages { flex: 1; overflow-y: auto; padding: 10px; }
-    .msg { margin: 8px 0; padding: 8px 12px; border-radius: 8px; max-width: 80%; word-wrap: break-word; }
-    .user { background: #007bff; color: white; align-self: flex-end; }
-    .bot { background: #f1f1f1; color: #000; align-self: flex-start; }
-    #inputArea { display: flex; border-top: 1px solid #ccc; }
-    #input { flex: 1; padding: 10px; border: none; border-radius: 0 0 0 10px; outline: none; }
-    #send { background: #007bff; color: white; border: none; padding: 10px 20px;
-            border-radius: 0 0 10px 0; cursor: pointer; font-weight: bold; }
-    #send:hover { background: #0056b3; }
+    #chatbox {
+      width: 400px;
+      height: 500px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+    #messages {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+      border-bottom: 1px solid #eee;
+    }
+    .msg {
+      margin: 5px 0;
+      padding: 8px 12px;
+      border-radius: 8px;
+      max-width: 80%;
+    }
+    .user {
+      background: #d1e7dd;
+      align-self: flex-end;
+    }
+    .bot {
+      background: #f8d7da;
+      align-self: flex-start;
+    }
+    #input-area {
+      display: flex;
+      border-top: 1px solid #eee;
+    }
+    #input-area input {
+      flex: 1;
+      padding: 10px;
+      border: none;
+      outline: none;
+    }
+    #input-area button {
+      padding: 10px 15px;
+      border: none;
+      background: #007bff;
+      color: white;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-
-<div id="chatbox">
-  <div id="messages"></div>
-  <div id="inputArea">
-    <input type="text" id="input" placeholder="Напиши въпрос...">
-    <button id="send">➤</button>
+  <h2>💬 Чатбот – Община Димитровград</h2>
+  <div id="chatbox">
+    <div id="messages"></div>
+    <div id="input-area">
+      <input id="userInput" type="text" placeholder="Напиши съобщение...">
+      <button onclick="sendMessage()">Изпрати</button>
+    </div>
   </div>
-</div>
 
-<script>
-  const messagesDiv = document.getElementById("messages");
-  const input = document.getElementById("input");
-  const sendBtn = document.getElementById("send");
+  <script>
+    async function sendMessage() {
+      const input = document.getElementById("userInput");
+      const msg = input.value.trim();
+      if (!msg) return;
 
-  function addMessage(text, sender) {
-    const div = document.createElement("div");
-    div.classList.add("msg", sender);
-    div.innerHTML = text;
-    messagesDiv.appendChild(div);
-    messagesDiv.scrollTop = messagesDiv.scrollHeight;
-  }
+      // добавяме съобщение на екрана
+      addMessage(msg, "user");
+      input.value = "";
 
-  async function sendMessage() {
-    const text = input.value.trim();
-    if (!text) return;
-    addMessage(text, "user");
-    input.value = "";
-
-    try {
-      const res = await fetch("/chat", {
+      // изпращаме заявка към Flask backend
+      const response = await fetch("/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ query: text })
+        body: JSON.stringify({ query: msg })
       });
-      const data = await res.json();
 
-      if (Array.isArray(data) && data.length > 0) {
-        let reply = "<b>Ето какво намерих:</b><br>";
-        data.forEach(r => {
-          reply += `🔗 <a href="${r.path}" target="_blank">${r.title}</a><br>`;
-        });
-        addMessage(reply, "bot");
-      } else if (data.answer) {
-        // ако бекендът връща {answer: "..."}
-        addMessage(data.answer, "bot");
-      } else {
-        addMessage("❌ Няма намерени резултати.", "bot");
-      }
-    } catch (err) {
-      addMessage("⚠️ Проблем с връзката към сървъра.", "bot");
+      const data = await response.json();
+      addMessage(data.answer, "bot");
     }
-  }
 
-  sendBtn.addEventListener("click", sendMessage);
-  input.addEventListener("keypress", e => { if (e.key === "Enter") sendMessage(); });
-</script>
-
+    function addMessage(text, type) {
+      const messages = document.getElementById("messages");
+      const div = document.createElement("div");
+      div.className = "msg " + type;
+      div.textContent = text;
+      messages.appendChild(div);
+      messages.scrollTop = messages.scrollHeight;
+    }
+  </script>
 </body>
 </html>
+
 
